--- a/NFV_Project/trydjango19/src/templates/logout.html
+++ b/NFV_Project/trydjango19/src/templates/logout.html
@@ -3,7 +3,7 @@
     <body>
         
         <h2>Your have been logged out</h2>
-        <p>Click <a href="/nfv/login/">here</a> to login again</p>
+        <p>Click <a href="/nfv">here</a> to login again</p>
     </body>
     
 </html>
